[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/back_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/theme_1.tres" type="Theme" id=3]
[ext_resource path="res://src/screens/settings_page/change_account/change_password/change_password.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.5874
margin_right = -1.5874
color = Color( 0.188235, 0.164706, 0.470588, 1 )

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -273.5
margin_top = -273.96
margin_right = 273.5
margin_bottom = -214.96
custom_fonts/font = SubResource( 1 )
text = "Changing User Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.244, 0.244 )
scene_path = "res://src/screens/settings_page/change_account/change_account_details.tscn"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -408.431
margin_top = -81.996
margin_right = -126.431
margin_bottom = -44.996
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Enter New Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -462.403
margin_top = 22.7723
margin_right = -131.403
margin_bottom = 59.7723
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Re-Enter New Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password_1" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.77
margin_top = -95.9086
margin_right = 347.23
margin_bottom = -27.9086
custom_fonts/font = SubResource( 3 )
secret = true
placeholder_text = "Enter New Password Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password_2" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.77
margin_top = 4.09766
margin_right = 347.23
margin_bottom = 72.0977
custom_fonts/font = SubResource( 3 )
secret = true
placeholder_text = "Re-Enter New Password Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.5
margin_top = 150.075
margin_right = 80.5
margin_bottom = 234.075
theme = ExtResource( 3 )
text = "Change"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
